# MC33_CMake_CXX23

./: CMakeLists.txt
include/: MC33.h
